--- a/README
+++ b/README
@@ -1,1 +1,10 @@
 Hopefully it's pretty neat.
+
+Oh yeah if you have some callbacks with the uri's like:
+/test/[*]
+/test/123
+the 123 would over write the [*] or vice versa the other way.
+you should only end with [*] and not have anything matching the previous with something at that level
+/test/123/[*]
+/test/126/12345
+would work as the second level is different
